--- a/views/pages/collections.pug
+++ b/views/pages/collections.pug
@@ -1,7 +1,6 @@
 extends ../base.pug
 
 block variables
-  - var template = 'collections'
+  - var template = 'collection'
 
 block content
-  h1.collections__title Collections
