--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -4,4 +4,16 @@ block variables
   - var template = 'home'
 
 block content
-  h1.collections__title Home
+  .home
+    .home__wrapper
+      .home__titles
+        each collection, index in collections
+          .home__titles__label=`${home.data.collection} ${Numbers(index)}`
+          .chome__titles__title=collection.data.title
+
+      .home__galery
+        each media in home.data.gallery
+          figure.home__galery__media
+            img.home__galery__media__image(alt=media.image.alt src=media.image.url)
+
+    a.home__link(href=Link(home.data.collections))=home.data.button
