--- a/views/partials/navigation.pug
+++ b/views/partials/navigation.pug
@@ -1,12 +1,16 @@
 nav.navigation
  .navagation__wrapper
-  a.navigation__link(href="/")
-    | Floema
+  a.navigation__link(href="/")=meta.data.title
     svg.navigation__link__icon
 
   ul.navigation__list
-    li.navigation__list__item
-      a.navigation__list__link(href="/about") About
+    each item in navigation.data.list
+      li.navigation__list__item
+        a.navigation__list__link(href=Link(item.link))
+          span=item.text
 
-    li.navigation__list__item
-      a.navigation__list__link(href="/collections") Collections
+    //- li.navigation__list__item
+    //-   a.navigation__list__link(href="/about") About
+
+    //- li.navigation__list__item
+    //-   a.navigation__list__link(href="/collections") Collections
