--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -37,7 +37,7 @@ block content
 
               each media in section.items
                 figure.about__highlight__media
-                  img.about__highlight__media(alt=media.image.alt src=media.image.url)
+                  img.about__highlight__media__image(alt=media.image.alt src=media.image.url)
 
         if section.slice_type == 'gallery'
           section.about__gallery
