added some styles

--- a/styles/components/preloader.scss
+++ b/styles/components/preloader.scss
@@ -1,13 +1,25 @@
 .preloader {
+  @extend %center;
+  @extend %cover;
 
+  background: $color-contessa;
+  color: $color-quarter-spanish-white;
+  display: none;
+  text-align: center;
+  z-index: z('preloader');
 }
 
 .preloader__text {
-
+  @extend %title-53;
+  max-width: 66rem;
 }
 
 .preloader__number {
-
+  @extend %description-14;
+  position: absolute;
+  bottom: 7.3rem;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 // .preloader__number__text {
