--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,18 +1,23 @@
 @import 'base/reset';
+
 @import './utils/variables';
 @import './utils/functions';
 @import './utils/mixins';
 @import './utils/vendors';
 @import './utils/responsive';
 
-@import './shared/titles';
 @import './shared/descriptions';
+@import './shared/titles';
+@import './shared/vertical-titles';
+
 
 @import 'base/fonts';
 @import 'base/base';
 
 @import './components/preloader';
 @import './components/transition';
+
+@import './layout/navigation';
 
 @import './pages/about/about';
 @import './pages/about/content';
