--- a/styles/layout/navigation.scss
+++ b/styles/layout/navigation.scss
@@ -1,17 +1,21 @@
 .navigation{
+  @extend %cover;
 
-}
-
-.navagation__wrapper{
-
+  color: $color-quarter-spanish-white;
+  z-index: z('navigation');
 }
 
 .navigation__link{
-
+  font-size: 0;
+  height: 2rem;
+  left: 4rem;
+  position: absolute;
+  top: 4rem;
+  width: 12.8rem;
 }
 
 .navigation__link__icon{
-
+  display: block;
 }
 
 .navigation__list{
@@ -19,13 +23,11 @@
 }
 
 .navigation__list__item{
-
+  position: absolute;
+  right: 4rem;
+  top: 4rem;
 }
 
 .navigation__list__link{
-
-}
-
-.text{
-
+  @extend %title-20;
 }
