--- a/styles/pages/about/about.scss
+++ b/styles/pages/about/about.scss
@@ -1,5 +1,6 @@
 .about{
-
+  background: $color-cadet-blue;
+  color: $color-bright-gray;
 }
 
 .about__wrapper{
@@ -7,7 +8,11 @@
 }
 
 .about__title{
+  @extend %title-100;
 
+  margin: auto;
+  max-width: 124rem;
+  text-align: center;
 }
 
 
