--- a/styles/pages/details/details.scss
+++ b/styles/pages/details/details.scss
@@ -1,63 +1,154 @@
 .detail{
+ @extend %cover;
+ @extend %center;
 
+ background: $color-quicksand;
+ color: $color-white;
+ @include media('<phone') {
+  height: auto;
+ }
 }
 
 .detail__wrapper{
+  align-items: center;
+  display: flex;
 
+  @include media('<phone') {
+    display: block;
+    margin: auto;
+    padding: 31.5rem 0;
+    width: 66.1rem;
+  }
 }
 
 .detail__media{
+  height: 78.2rem;
+  width: 55.4rem;
+  position: relative;
 
+  @include media('<phone') {
+    height: 93.4rem;
+    margin: 0 auto 7.8rem;
+    width: 100%;
+  }
 }
 
 .detail__media__image{
-
+  @extend %cover;
+  object-fit: cover;
 }
 
 .detail__information{
-
+  padding-left: 8.2rem;
+  @include media('<phone') {
+    padding-left: 0;
+  }
 }
 
 .detail__information__collection{
-
+  @extend %description-12;
+  margin-bottom: 4rem;
+  text-transform: uppercase;
 }
 
 .detail__information__title{
+  @extend %title-120;
 
+  max-width: 60rem;
 }
 
 .detail__information__content{
-
+  padding-left: 18rem;
+  @include media('<phone') {
+    padding-left: 0;
+  }
 }
 
 .detail__information__highlights{
+  margin-top: 6rem;
+}
 
+.detail__information__highlight{
+  display: flex;
+  align-items: center;
+
+  &:not(:first-child){
+    margin-top: 4rem;
+  }
 }
 
 .detail__information__highlight__icon{
+  margin-right: 3.75rem;
+  height: 4rem;
+  width: 4rem;
 
+  @include media('<phone') {
+    height: 9.2rem;
+    margin-right: 5.8rem;
+    width: 9.2rem;
+  }
 }
 
 .detail__information__highlight__text{
-
+  @extend %description-16;
 }
 
 .detail__information__list{
-
+  margin-top: 4rem;
 }
 
 .detail__information__item{
+  display: flex;
 
+  &:not(:first-child){
+    margin-top: 4rem;
+  }
 }
 
 .detail__information__item__title{
+  @extend %description-12;
 
+  padding-right: 2.5rem;
+  width: 10rem;
+
+  @include media('<phone') {
+    padding-right: 5rem;
+    width: 15rem;
+  }
 }
 
 .detail__information__item__description{
+  @extend %description-16;
 
+  letter-spacing: 0.3rem;
+  max-width: 44rem;
 }
 
 .detail__information__link{
+  @extend %title-30;
+  display: inline-block;
+  margin-top: 3rem;
+}
 
+.detail__button {
+  align-items: center;
+  bottom: 5rem;
+  display: flex;
+  height: 6rem;
+  justify-content: center;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  width: 12.4rem;
+  z-index: 3;
+  @include media('<phone') {
+    bottom: 12rem;
+    font-size: 3rem;
+    height: 13rem;
+    width: 26.8rem;
+  }
+}
+
+.detail__button__icon {
+  @extend %cover;
 }
