--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -1,5 +1,30 @@
 .home {
+  @extend %center;
+  @extend %cover;
 
+  background: $color-contessa;
+  color: $color-quarter-spanish-white;
+  text-align: center;
+
+  &:before,
+  &:after {
+    content: '';
+    height: 24rem;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+  }
+
+  &:before {
+    background: linear-gradient(to bottom, $color-contessa 15%, rgba($color-contessa, 0) 100%);
+    top: 0;
+  }
+
+  &:after {
+    background: linear-gradient(to top, $color-contessa 15%, rgba($color-contessa, 0) 100%);
+    bottom: 0;
+  }
 }
 
 .home__wrapper {
@@ -7,23 +32,23 @@
 }
 
 .home__titles {
-
+  @extend %vertical-titles;
 }
 
 .home__titles__label {
-
+  @extend %vertical-titles__label;
 }
 
 .home__titles__title {
-
+  @extend %vertical-titles__title;
 }
 
 .home__galery {
-
+  @extend %cover;
 }
 
 .home__galery__media {
-
+  position: absolute;
 }
 
 .home__galery__media__image {
@@ -31,5 +56,22 @@
 }
 
 .home__link {
+  @extend %description-14;
 
+  align-items: center;
+  bottom: 5rem;
+  display: flex;
+  height: 6rem;
+  justify-content: center;
+  left: 50%;
+  letter-spacing: 0.05rem;
+  position: absolute;
+  text-transform: uppercase;
+  transform: translateX(-50%);
+  width: 28.8rem;
+  z-index: 2;
+}
+
+.home__link__icon {
+  @extend %cover;
 }
