--- a/styles/shared/descriptions.scss
+++ b/styles/shared/descriptions.scss
@@ -1,9 +1,9 @@
 %description-12 {
   font-size: 1.2rem;
 
-  // @include media('<phone') {
-  //   font-size: 3rem;
-  // }
+  @include media('<phone') {
+    font-size: 3rem;
+  }
 }
 
 %description-14 {
@@ -17,6 +17,7 @@
 %description-16 {
   font-size: 1.6rem;
   font-weight: 300;
+  line-height: 1.5;
 }
 
 %description-18 {
@@ -24,7 +25,7 @@
   font-weight: 300;
   line-height: 1.5;
 
-  // @include media('<phone') {
-  //   font-size: 2.8rem;
-  // }
+  @include media('<phone') {
+    font-size: 2.8rem;
+  }
 }
