--- a/styles/shared/titles.scss
+++ b/styles/shared/titles.scss
@@ -3,9 +3,18 @@
   font-size: 2rem;
 }
 
+%title-30 {
+  font-family: $font-george-x;
+  font-size: 3rem;
+  @include media('<phone') {
+    font-size: 5.2rem;
+  }
+}
+
 %title-53 {
   font-family: $font-george-x;
   font-size: 5.3rem;
+  line-height: 1;
 }
 
 %title-60 {
@@ -16,11 +25,16 @@
 %title-100 {
   font-family: $font-george-x;
   font-size: 10rem;
+  line-height: 1;
 }
 
 %title-120 {
   font-family: $font-george-x;
   font-size: 12rem;
+  line-height: 0.82;
+  @include media('<phone') {
+    font-size: 18rem;
+  }
 }
 
 %title-200 {
