--- a/views/pages/collections.pug
+++ b/views/pages/collections.pug
@@ -6,9 +6,9 @@ block variables
 block content
   .collections
     .collections__wrapper
-      .collections__title
+      .collections__titles
         each collection, index in collections
-          .collections__title__label=`${home.data.collection} ${Numbers(index)}`
+          .collections__titles__label!=`${home.data.collection}<br>${Numbers(index)}`
           .collections__titles__title=collection.data.title
 
       .collections__gallery
@@ -19,8 +19,8 @@ block content
                 figure.collections__gallery__media
                   img.collections__gallery__media__image(alt=product.products_product.data.image.alt src=product.products_product.data.image.url)
 
-  .collections__content
-    each collection in collections
-      article.collections__article
-        h2.collections__article__title=`${collection.data.title} ${home.data.collection}`
-        p.collections__article__description=collection.data.description
+      .collections__content
+        each collection, index in collections
+          article.collections__article(class=`${index === 0 ? 'collections__article--active' : ''}`)
+            h2.collections__article__title=`${collection.data.title} ${home.data.collection}`
+            p.collections__article__description=collection.data.description
