fixed responsive issues

--- a/styles/pages/about/about.scss
+++ b/styles/pages/about/about.scss
@@ -13,6 +13,10 @@
   margin: auto;
   max-width: 124rem;
   text-align: center;
+
+  @include media('<phone') {
+    max-width: 67.7rem;
+   }
 }
 
 
