--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -4,6 +4,7 @@
 
   background: $color-contessa;
   color: $color-quarter-spanish-white;
+  overflow: hidden;
   text-align: center;
 
   &:before,
@@ -49,6 +50,7 @@
 
 .home__galery__media {
   position: absolute;
+  visibility: hidden;
 }
 
 .home__galery__media__image {
@@ -70,6 +72,12 @@
   transform: translateX(-50%);
   width: 28.8rem;
   z-index: 2;
+
+  @include media('<phone') {
+    bottom: 7.5rem;
+    height: 13.7rem;
+    width: 55rem;
+  }
 }
 
 .home__link__icon {
