--- a/styles/components/preloader.scss
+++ b/styles/components/preloader.scss
@@ -20,7 +20,13 @@
   bottom: 7.3rem;
   left: 50%;
   transform: translateX(-50%);
+
+  @include media('<phone'){
+    font-size: 2.4rem;
+  }
 }
+
+
 
 // .preloader__number__text {
 
