--- a/styles/pages/about/content.scss
+++ b/styles/pages/about/content.scss
@@ -19,6 +19,16 @@
   &:nth-child(8) {
     justify-content: flex-start;
   }
+
+  @include media('<phone') {
+    &:nth-child(5) {
+      justify-content: flex-end;
+    }
+
+    &:nth-child(8) {
+      justify-content: flex-start;
+    }
+  }
 }
 
 .about__content__wrapper{
@@ -27,10 +37,46 @@
   .about__content--right & {
     flex-direction: row-reverse;
   }
+  @include media('<phone'){
+    .about__content:nth-child(3) & {
+      flex-direction: column-reverse;
+    }
+
+    .about__content:nth-child(5) & {
+      flex-direction: column;
+    }
+
+    .about__content:nth-child(8) & {
+      flex-direction: column-reverse;
+    }
+
+    .about__content:nth-child(9) & {
+      flex-direction: column-reverse;
+    }
+  }
 }
 
 .about__content__box {
   display: flex;
+  @include media('<phone'){
+    margin: auto;
+    width: 60.9rem;
+
+    .about__content:nth-child(3) & {
+      margin-top: 10rem;
+    }
+
+    .about__content:nth-child(5) & {
+      margin-bottom: 10rem;
+    }
+
+    .about__content:nth-child(8) & {
+      margin-top: 10rem;
+    }
+    .about__content:nth-child(9) & {
+      margin-top: 10rem;
+    }
+  }
 }
 
 .about__content__label{
@@ -38,6 +84,12 @@
 
   text-transform: uppercase;
   width: 18rem;
+
+  @include media('<phone'){
+    font-size: 2.4rem;
+    padding-right: 2.5rem;
+    width: 15rem;
+  }
 }
 
 .about__content__description{
@@ -45,6 +97,9 @@
 
   p:not(:first-child) {
     margin-top: 2.5rem;
+  }
+  @include media('<phone'){
+    width: calc(100% - 15rem);
   }
 }
 
@@ -73,6 +128,32 @@
     height: 85.5rem;
     margin-left: 22rem;
     width: 60.8rem;
+  }
+
+  @include media('<phone'){
+    .about__content:nth-child(3) & {
+      height: 91.4rem;
+      margin-left: 0;
+      width: 60.9rem;
+    }
+
+    .about__content:nth-child(5) & {
+      height: 50rem;
+      margin-left: 0;
+      width: 100vw;
+    }
+
+    .about__content:nth-child(8) & {
+      height: 52rem;
+      margin-right: 0;
+      width: 100vw;
+    }
+
+    .about__content:nth-child(9) & {
+      height: 85.5rem;
+      margin-left: 0;
+      width: 60.8rem;
+    }
   }
 }
 
