--- a/styles/pages/about/highlight.scss
+++ b/styles/pages/about/highlight.scss
@@ -19,6 +19,16 @@
   .about__highlight:nth-child(4) & {
     width: 104rem;
   }
+
+  @include media('<phone'){
+    height: 316.2rem;
+    width: 100%;
+
+    .about__highlight:nth-child(4) & {
+      height: 119.3rem;
+      width: 100%;
+    }
+  }
 }
 
 .about__hightlight__label{
@@ -32,6 +42,12 @@
   text-align: center;
   text-transform: uppercase;
   width: 9.6rem;
+  @include media('<phone'){
+    font-size: 2.4rem;
+    margin-top: 6.5rem;
+    top: 90rem;
+    width: 19rem;
+  }
 }
 
 .about__highlight__title{
@@ -42,6 +58,11 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%) rotate(-90deg);
+
+  @include media('<phone'){
+    font-size: 30rem;
+    margin-top: 6.5rem;
+  }
 }
 
 .about__highlight__media{
@@ -62,6 +83,25 @@
   &:last-child {
     bottom: 0;
     right: 0;
+  }
+
+  @include media('<phone'){
+    .about__highlight:last-child & {
+      height: 76rem;
+      width: 54rem;
+
+      &:first-child {
+        left: 50%;
+        top: 0;
+        transform: translateX(-50%);
+      }
+
+      &:last-child {
+        bottom: 0;
+        right: 50%;
+        transform: translateX(50%);
+      }
+    }
   }
 }
 
