--- a/styles/shared/vertical-titles.scss
+++ b/styles/shared/vertical-titles.scss
@@ -15,6 +15,10 @@
   text-transform: uppercase;
   text-align: center;
   transform: rotate(90deg);
+
+  @include media('<phone') {
+    font-size: 1.2rem;
+  }
 }
 
 %vertical-titles__title {
