setup javascript files

--- a/views/pages/collections.pug
+++ b/views/pages/collections.pug
@@ -17,7 +17,7 @@ block content
             each product in collection.data.products
               a.collections__gallery__link(href=Link(product.products_product))
                 figure.collections__gallery__media
-                  img.collections__gallery__media__image(alt=product.products_product.data.image.alt src=product.products_product.data.image.url)
+                  img.collections__gallery__media__image(alt=product.products_product.data.image.alt data-src=product.products_product.data.image.url)
 
       .collections__content
         each collection, index in collections
