--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -14,7 +14,7 @@ block content
       .home__galery
         each media in home.data.gallery
           figure.home__galery__media
-            img.home__galery__media__image(alt=media.image.alt src=media.image.url)
+            img.home__galery__media__image(alt=media.image.alt data-src=media.image.url)
 
     a.home__link(href=Link(home.data.collections))=home.data.button
       svg.home__link__icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 288 60")
