--- a/styles/components/preloader.scss
+++ b/styles/components/preloader.scss
@@ -9,15 +9,25 @@
 }
 
 .preloader__text {
-  @extend %title-53;
+  font-size: 0;
   max-width: 66rem;
+
+  span {
+    display: inline-block;
+    overflow: hidden;
+  }
+
+  span span {
+    @extend %title-53;
+  }
 }
 
 .preloader__number {
   @extend %description-14;
-  position: absolute;
   bottom: 7.3rem;
   left: 50%;
+  overflow: hidden;
+  position: absolute;
   transform: translateX(-50%);
 
   @include media('<phone'){
@@ -27,6 +37,6 @@
 
 
 
-// .preloader__number__text {
-
-// }
+.preloader__number__text {
+  display: inline-block;
+}
