--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -1,6 +1,6 @@
 .home {
   @extend %center;
-  @extend %cover;
+  @extend %page;
 
   background: $color-contessa;
   color: $color-quarter-spanish-white;
