--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -46,3 +46,13 @@ img {
 .content {
   @extend %cover;
 }
+
+[data-animation="label"],
+[data-animation="paragraph"],
+[data-animation="title"] {
+  span {
+    display: inline-block;
+    overflow: hidden;
+    vertical-align: top;
+  }
+}
