--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -15,15 +15,15 @@ block content
 
       each section in about.data.body
         if section.slice_type == 'title'
-          h2.about__title!=section.primary.text.replace(/\n/g, '<br>')
+          h2.about__title(data-animation='title')!=section.primary.text.replace(/\n/g, '<br>')
 
         if section.slice_type == 'content'
           section.about__content(class=`${section.primary.type === 'left' ? 'about__content--left' : 'about__content--right'}`)
             .about__content__wrapper
               .about__content__box
-                p.about__content__label!=section.primary.label
+                p.about__content__label(data-animation="label")!=section.primary.label
 
-                .about__content__description!=PrismicDOM.RichText.asHtml(section.primary.description)
+                .about__content__description!=PrismicDOM.RichText.asHtml(section.primary.description).replace(/<p>/g, '<p data-animation="paragraph">')
 
               figure.about__content__media
                 img.about__content__media__image(alt=section.primary.image.alt data-src=section.primary.image.url)
@@ -32,9 +32,9 @@ block content
           section.about__highlight
             .about__highlight__wrapper
               if section.primary.label
-                p.about__hightlight__label=section.primary.label
+                p.about__hightlight__label(data-animation="label")=section.primary.label
 
-              h3.about__highlight__title=section.primary.title1
+              h3.about__highlight__title(data-animation='highlight')=section.primary.title1
 
               .about__highlight_medias
                 each media in section.items
