added page transitions and more animations

--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -5,7 +5,7 @@ block variables
 
 block content
   //- p #{about.data.gallery[0].image.url}'s Pug source code!
-  .about
+  .about(data-background="#B2B8C3" data-color="#37384C")
     .about__wrapper
       section.about__gallery
             .about__gallery__wrapper
