--- a/styles/layout/navigation.scss
+++ b/styles/layout/navigation.scss
@@ -16,6 +16,10 @@
   top: 4rem;
   width: 12.8rem;
 
+  &:hover {
+    opacity: 0.5;
+  }
+
   @include media('<phone') {
     height: 4.3rem;
     left: 5rem;
@@ -40,7 +44,9 @@
 }
 
 .navigation__list__link{
+  @extend %link--hidden;
   @extend %title-20;
 
   display: block;
+  line-height: 1;
 }
