--- a/styles/pages/collections/collections.scss
+++ b/styles/pages/collections/collections.scss
@@ -1,8 +1,8 @@
 .collections {
   @extend %page;
 
-  background: $color-quicksand;
-  color: $color-quarter-spanish-white;
+  // background: $color-quicksand;
+  // color: $color-quarter-spanish-white;
 }
 
 .collections__wrapper {
@@ -85,8 +85,12 @@
 
 .collections__mobile {
   bottom: 5rem;
-  display: flex;
+  display: none;
   position: absolute;
+
+  @include media('<phone'){
+    display: flex;
+  }
 }
 .collections__mobile__item {
   padding-left: 5rem;
