--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -11,10 +11,10 @@ block content
           .home__titles__label=`${home.data.collection} ${Numbers(index)}`
           .home__titles__title=collection.data.title
 
-      .home__galery
+      .home__gallery
         each media in home.data.gallery
-          figure.home__galery__media
-            img.home__galery__media__image(alt=media.image.alt data-src=media.image.url)
+          figure.home__gallery__media
+            img.home__gallery__media__image(alt=media.image.alt data-src=media.image.url)
 
     a.home__link(href=Link(home.data.collections))=home.data.button
       svg.home__link__icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 288 60")
