added webgl slider rotation to about page

--- a/styles/pages/about/gallery.scss
+++ b/styles/pages/about/gallery.scss
@@ -1,6 +1,6 @@
 .about__gallery{
   height: 58.6rem;
-  margin: 20rem 0;
+  margin: 15rem 0;
   overflow: hidden;
   pointer-events: none;
   position: relative;
@@ -25,7 +25,7 @@
 
 .about__gallery__media{
   height: 43.7rem;
-  margin: 0.4rem;
+  margin: 0 4rem;
   position: relative;
   width: 30.9rem;
 }
