implemented webgl slider for collections page

--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -34,6 +34,11 @@ a {
   text-decoration: none;
 }
 
+canvas {
+  position: relative;
+  pointer-events: none;
+}
+
 button {
   background: none;
   border: none;
