--- a/styles/pages/collections/collections.scss
+++ b/styles/pages/collections/collections.scss
@@ -13,6 +13,8 @@
 .collections__titles {
   @extend %vertical-titles;
 
+  transition: transform 1s ease;
+
   @include media('<phone'){
     display: none;
   }
@@ -28,24 +30,35 @@
 
 .collections__gallery {
   @extend %cover;
+  z-index: 1;
 }
 
 .collections__gallery__wrapper {
   align-items: center;
   display: flex;
+  left: 50%;
   top: 50%;
   position: absolute;
-  transform: translateY(-50%);
+  transform: translate(-44.7rem * 0.5, -50%);
 }
 
 .collections__gallery__link {
   display: block;
   margin: 0 5.3rem;
+
+  &:first-child {
+    margin-left: 0;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .collections__gallery__media {
   height: 63.1rem;
   position: relative;
+  visibility: hidden;
   width: 44.7rem;
 }
 
@@ -64,13 +77,15 @@
 }
 
 .collections__article {
-  left: 8rem;
-  position: absolute;
   bottom: 8rem;
+  left: 8rem;
   opacity: 0;
+  position: absolute;
+  transition: opacity 0.4s ease;
 
   &--active {
     opacity: 1;
+    transition-delay: 0.4s;
   }
 }
 
@@ -104,4 +119,14 @@
 .collections__mobile__item__title {
   font-family: $font-george-x;
   font-size: 12rem;
+}
+
+.collections__button {
+  height: 63.1rem;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  width: 44.7rem;
 }
